--- a/Web/Pages/Shared/_Layout.cshtml
+++ b/Web/Pages/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2025 - Web - Kacper Przełożny & Paweł Słota
         </div>
     </footer>
 
